--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## necesary imports"
+    "## Necessary imports"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### necessary funcionts\n",
+    "### Necessary funcionts\n",
     "The requirements are:\n",
     "- **segment_background**.\n",
     "    - *Function to segment the image by subtracting background and foreground with noise reduction.*\n",
